Fixed this error: Resizing breaks spacing on some cards. Changed files: section-news.scss, section-products-and-services.scss, and files php

--- a/html/scss/section-news.scss
+++ b/html/scss/section-news.scss
@@ -118,6 +118,10 @@
 	.swiper-pagination {
 		display: none;
 	}
+
+	.swiper-slide {
+		height: auto;
+	}
 }
 
 .decor-news {
@@ -165,6 +169,10 @@
 }
 
 @media (max-width: 1199px) {
+	.news-item {
+		max-width: 100%;
+	}
+
 	.decor-news {
 		height: 98%;
 	}
